# pythonPackageTemplate

./: README.md  pyproject.toml
tests/: test_python_package_version.py
