[project]
name = "python-package-template"
version = "0.0.1"
description = "this is a python packaging template used for creating python packages"
authors = [
    {name = "Laxminarayana Vadnala",email = "laxminarayana.vadnala@gmail.com"},
]
dependencies = ["requests>=2.32.3"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "black>=25.1.0",
]