[project]
name = "python-package-template"
version = "0.0.1"
description = "this is a python packaging template used for creating python packages"
authors = [
    {name = "Laxminarayana Vadnala",email = "laxminarayana.vadnala@gmail.com"},
]
dependencies = ["requests>=2.32.3"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}
 
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

 
[tool.pdm]
distribution = true
 
[[tool.pdm.source]]
name = "artifactory"
url = "https://artifactory.fis.dev/artifactory/deede-pypi-dev/"
verify_ssl = true
 
[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "black>=25.1.0",
    "mypy==1.15.0",
    "mypy_extensions==1.1.0",
    "typing_extensions==4.13.2",
    "flake8==7.2.0",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2"
]
statictype = [
    "mypy==1.15.0",
    "mypy_extensions==1.1.0",
    "typing_extensions==4.13.2"
]
testing = [
    "pytest>=8.3.5"
]
linting = [
    "black>=25.1.0",
    "flake8==7.2.0",
    "pycodestyle==2.13.0",
    "pyflakes==3.3.2"
]
 
[tool.pdm.scripts]
test = "pytest"
black_format = "black --check ."
static_type_check = "mypy ."
linting_source = """flake8 \
                    --hang-closing \
                    --statistics \
                    --exclude=__pycache__,.git,*.pyc,build,dist \
                    --filename=*.py \
                    src/"""
linting_test = """flake8 \
                    --hang-closing \
                    --statistics \
                    --exclude=__pycache__,.git,*.pyc,build,dist \
                    --filename=*.py \
                    tests/"""